syntax = "proto3";

package runtiva.chat.v1;

// Request Message for `Chat_Delete` RPC. 
message ChatDeleteRequest {
    int64 id = 1;
}
